# dfsp

./: .env  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.dev.yml  docker-compose.yml
.githooks/: commit-msg  commit-msg.py  pre-commit
.github/: CI_CD_README.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  commitlint.yml  deploy-prod.yml  pr-cc-guard.yml  pr-python-style.yml  release.yml  security.yml
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  pyrightconfig.json  pytest.ini
backend/app/: blockchain.py  cache.py  config.py  dependencies.py  deps.py  main.py  quotas.py  relayer.py  security.py  security_telegram.py  settings.py  validators.py
backend/app/api/: auth.py
backend/app/blockchain/: web3_client.py
backend/app/db/: base.py  models.py  session.py
backend/app/ipfs/: client.py
backend/app/middleware/: __init__.py  observability.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  action_intent.py  anchors.py  asset.py  events.py  files.py  grants.py  intent.py  meta_tx_requests.py  public_links.py  telegram_link.py  users.py
backend/app/repos/: file_repo.py  grant_repo.py  telegram_repo.py  user_repo.py
backend/app/routers/: __init__.py  admin.py  anchors.py  auth.py  bot.py  chain_info.py  download.py  files.py  grants.py  health.py  intents.py  meta_tx.py  one_time.py  pow.py  public_links.py  storage.py  system.py  telegram.py  tonconnect.py  users.py  verify.py
backend/app/schemas/: action_intent.py  anchors.py  auth.py  bot.py  grants.py  public_links.py  telegram.py  verify.py
backend/app/security/: jwt.py
backend/app/services/: README_ANCHORING.md  anchoring.py  auth.py  event_logger.py  event_publisher.py  notification_publisher.py
backend/app/tasks/: anchor.py
backend/app/telemetry/: logging.py  metrics.py
backend/dfsp_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docker/: compose.backend.yml  entrypoint.sh  wait_for.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 00674622c0ac_auto_20251031093022.py  090cff9666f1_create_telegram_links_and_action_.py  0a0f45a5379b_auto_20251006173415.py  0f6820f52206_auto_20251006182322.py  12568120f3dc_auto_20251007010003.py  179bbe15a360_auto_20251006194345.py  18bab6e3d71d_auto_20251006173440.py  190c8be85806_auto_20251007043702.py  1b2c3d4e5f67_add_telegram_links_table.py  1e41d800a30b_merge_telegram_bot_tables_and_file_.py  1f40aed080bb_auto_20251006162849.py  1fb72cf9c0fe_auto_20251007002450.py  293de018f5f3_auto_20251007153619.py  2c3d4e5f6a78_add_is_active_to_telegram_links.py  2d7f321e4bf6_auto_20251007154057.py  2e13378185a0_auto_20251007170933.py  39f95443fd2c_auto_20251006164512.py  3c053681ce94_auto_20251007045758.py  3d4e5f6a7b89_create_intents_table.py  4520ee2de973_auto_20251006164350.py  47b63302e935_auto_20251006162813.py  48d080230cbd_auto_20251006183102.py  4b6b76f5fcd1_recreate_files_file_versions_with_.py  4e5f6a7b8c90_add_deleted_at_to_files.py  57aca6da1cdc_auto_20251007004651.py  57e5e3374e65_auto_20251006164311.py  5959592d432b_auto_20251007175441.py  5c3f00322a4e_auto_20251007003008.py  5edf1b7d9fb0_auto_20251006160942.py  68057369ab53_initial_schema.py  6c6f409bdaa1_auto_20251007150807.py  6f2172b6db44_auto_20251007005953.py  6f7a8b9c0d12_add_ton_pubkey_to_users.py  6fd2a7b77878_auto_20251003082811.py  73725df44a8a_auto_20251006181735.py  7669cef24e16_auto_20251006194404.py  77cead179c45_auto_20251007160716.py  7a50e3ee1824_auto_20251006191524.py  7a8b9c0d1e23_create_action_intents.py  7c51884d13de_auto_20251006164401.py  (+43 more)
backend/tests/: sign.py  signer.py  test_health.py  test_metrics.py  test_rate_limit.py  test_security_and_metrics.py
backend/tests/integration/: conftest.py  test_anchoring.py  test_auth.py  test_bot_endpoints.py  test_bot_links.py  test_chain_capid.py  test_delete_file.py  test_download.py  test_event_publisher.py  test_files.py  test_files_rename.py  test_health.py  test_intents.py  test_meta_tx.py  test_metrics_health.py  test_notification_publisher.py  test_one_time_link.py  test_public_links.py  test_revoke.py  test_share.py  test_storage.py  test_telegram_linking.py  test_verify.py
backend/tests/unit/: conftest.py  test_telegram_initdata.py  test_ton_auth.py
bot/: .env.example  Dockerfile  prometheus.example.yml  pyproject.toml  readme.md
bot/app/: config.py  main.py  metrics.py
bot/app/data/: messages.json
bot/app/handlers/: files.py  lang.py  link.py  link_callback.py  me.py  menu.py  notifications.py  start.py  switch.py  unlink.py  verify.py
bot/app/middlewares/: error_handler.py  i18n.py  logging.py  rate_limit.py
bot/app/security/: hmac.py
bot/app/services/: dfsp_api.py  message_store.py
bot/app/services/notifications/: __init__.py  address_resolver.py  antispam.py  consumer.py  formatter.py  models.py  preferences.py  retry.py
bot/app/utils/: diagnostics.py  format.py  webhook.py
bot/tests/: conftest.py  signer.py  test_files.py  test_hmac.py  test_integration_full_flow.py  test_message_store.py  test_notifications.py  test_rate_limit.py  test_verify.py
contracts/: SECURITY_AUDIT.md  hardhat.config.ts  package-lock.json  package.json  setup-contracts.sh  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/deploy/: .env.local  chain-config.json
contracts/docker/: compose.dev.yml
contracts/scripts/: deploy-local.ts  export-abi.ts  export-deployment.ts
deploy/: .env.prod.example  Caddyfile  compose.dev.yml  compose.prod.yml  nginx.conf
dfsp_frontend_app/: .env  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
docker/: Caddyfile
docs/: TON_SCOPE.md  browser-support.md  dfsp-server.yml  openapi.yaml
frontend/: .env  index.html  package.json  pnpm-lock.yaml  setup-frontend.sh  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend_new/: .eslintrc.cjs  README.md  index.html  vite.config.ts
scripts/: ngrok_sync.sh
(+196 files in other folders)
