[project]
name = "dfsp-backend"
version = "0.1.0"
description = "DFSP backend (FastAPI)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "sqlalchemy==2.0.43",
  "alembic==1.13.3",
  "asyncpg==0.29.0",
  "pytest",
  "ruff",
  "pyright",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=6.4.0",
  "web3>=7.13.0",
  "python-dotenv>=1.1.1",
  "psycopg>=3.2.10",
  "eth-account>=0.13.7",
  "jose>=1.0.0",
  "celery>=5.5.3",
  "pydantic>=2.11.9",
  "mako>=1.3.10",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "pytest>=8.2", "pyright>=1.1.380"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv/*"]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","ANN","N","C4","T20","Q","S","RUF"]
ignore = [
  "ANN101","ANN102",   # self/cls annotations aren't required
  "S101"               # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = "warning"
reportUnknownVariableType = "warning"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"
managed = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
