[project]
name = "dfsp-telegram-bot"
version = "0.1.0"
description = "DFSP Telegram bot service"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aiogram>=3.5.0,<4.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "prometheus-client>=0.20.0,<0.21.0",
  "aiohttp>=3.10.0,<4.0.0",
  "aioredis>=2.0.0,<3.0.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
]
